src/test/ui/issues/issue-37433.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/issue-37433.rs:7:24
   |
LL |         asm!("" :: "r"(""));
   |                        ^^

error: aborting due to previous error

